# cake-bank-classifier-project

./: .gitignore  README.md  pyproject.toml  requirements.md  requirements.txt  task_2.md
notebooks/: baseline.ipynb  baseline_colab.ipynb  check_quality.ipynb  dummy_mlflow.ipynb  eda.ipynb  main.ipynb  mlflow.db
src/: dataset.py  preprocess.py
src/classifier/: __init__.py  evaluations.py  loss_functions.py  model.py  predict.py  preprocess.py  regularizations.py  train.py
src/classifier/data_module/: dataloader.py  dataset.py  transform.py
