[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdop297", email = "lenhatminh297@gmail.com" }
]
requires-python = ">=3.10, <3.11"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "matplotlib>=3.9.0",         # Hạ version xíu cho an toàn, hoặc để nguyên cũng được
    "mediapipe>=0.10.14",        # Bản ổn định
    "numpy>=1.26.0,<2.0.0",      # <--- QUAN TRỌNG: Ghim cứng dưới 2.0 để tránh lỗi tương thích
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "torch>=2.4.0",              # PyTorch 2.4/2.5 tương thích tốt với CUDA 12.4
    "torchvision>=0.19.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0"             # Nên thêm Pillow rõ ràng vì dùng nhiều trong xử lý ảnh
]

[project.scripts]
classifier = "classifier:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
