[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mdop297", email = "lenhatminh297@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]


[project.scripts]
classifier = "classifier:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
